test: 프로덕션 코드 수정으로 인한 테스트 코드 수정